// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders using ajax-loaded object data (deep parent chain) 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs
      pid="foo:1234"
    >
      <ul
        className="breadcrumb"
        key="breadcrumbs_0_s"
      >
        <li
          key="breadcrumb_mainmenu_0_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_0_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_0_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:0_0_s"
        >
          <Link
            href="/edit/object/foo:0"
          >
            <a
              href="/edit/object/foo:0"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 0
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:1_0_s"
        >
          <Link
            href="/edit/object/foo:1"
          >
            <a
              href="/edit/object/foo:1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 1
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:2_0_s"
        >
          <Link
            href="/edit/object/foo:2"
          >
            <a
              href="/edit/object/foo:2"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 2
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:3_0_s"
        >
          <Link
            href="/edit/object/foo:3"
          >
            <a
              href="/edit/object/foo:3"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 3
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:4_0_s"
        >
          <Link
            href="/edit/object/foo:4"
          >
            <a
              href="/edit/object/foo:4"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 4
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:5_0_s"
        >
          <Link
            href="/edit/object/foo:5"
          >
            <a
              href="/edit/object/foo:5"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 5
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:6_0_s"
        >
          <Link
            href="/edit/object/foo:6"
          >
            <a
              href="/edit/object/foo:6"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 6
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:7_0_s"
        >
          <Link
            href="/edit/object/foo:7"
          >
            <a
              href="/edit/object/foo:7"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 7
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:8_0_s"
        >
          <Link
            href="/edit/object/foo:8"
          >
            <a
              href="/edit/object/foo:8"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 8
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:9_0_s"
        >
          <Link
            href="/edit/object/foo:9"
          >
            <a
              href="/edit/object/foo:9"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 9
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:10_0_s"
        >
          <Link
            href="/edit/object/foo:10"
          >
            <a
              href="/edit/object/foo:10"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 10
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:11_0_s"
        >
          <Link
            href="/edit/object/foo:11"
          >
            <a
              href="/edit/object/foo:11"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 11
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:12_0_s"
        >
          <Link
            href="/edit/object/foo:12"
          >
            <a
              href="/edit/object/foo:12"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 12
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:13_0_s"
        >
          <Link
            href="/edit/object/foo:13"
          >
            <a
              href="/edit/object/foo:13"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 13
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:14_0_s"
        >
          <Link
            href="/edit/object/foo:14"
          >
            <a
              href="/edit/object/foo:14"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 14
            </a>
          </Link>
        </li>
      </ul>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`Breadcrumb renders using ajax-loaded object data (many parents) 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs
      pid="foo:1234"
    >
      <ul
        className="breadcrumb"
        key="breadcrumbs_0_s"
      >
        <li
          key="breadcrumb_mainmenu_0_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_0_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_0_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:0_0_s"
        >
          <Link
            href="/edit/object/foo:0"
          >
            <a
              href="/edit/object/foo:0"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 0
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_1_s"
      >
        <li
          key="breadcrumb_mainmenu_1_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_1_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_1_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:1_1_s"
        >
          <Link
            href="/edit/object/foo:1"
          >
            <a
              href="/edit/object/foo:1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 1
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_2_s"
      >
        <li
          key="breadcrumb_mainmenu_2_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_2_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_2_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:2_2_s"
        >
          <Link
            href="/edit/object/foo:2"
          >
            <a
              href="/edit/object/foo:2"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 2
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_3_s"
      >
        <li
          key="breadcrumb_mainmenu_3_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_3_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_3_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:3_3_s"
        >
          <Link
            href="/edit/object/foo:3"
          >
            <a
              href="/edit/object/foo:3"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 3
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_4_s"
      >
        <li
          key="breadcrumb_mainmenu_4_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_4_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_4_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:4_4_s"
        >
          <Link
            href="/edit/object/foo:4"
          >
            <a
              href="/edit/object/foo:4"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 4
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_5_s"
      >
        <li
          key="breadcrumb_mainmenu_5_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_5_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_5_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:5_5_s"
        >
          <Link
            href="/edit/object/foo:5"
          >
            <a
              href="/edit/object/foo:5"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 5
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_6_s"
      >
        <li
          key="breadcrumb_mainmenu_6_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_6_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_6_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:6_6_s"
        >
          <Link
            href="/edit/object/foo:6"
          >
            <a
              href="/edit/object/foo:6"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 6
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_7_s"
      >
        <li
          key="breadcrumb_mainmenu_7_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_7_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_7_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:7_7_s"
        >
          <Link
            href="/edit/object/foo:7"
          >
            <a
              href="/edit/object/foo:7"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 7
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_8_s"
      >
        <li
          key="breadcrumb_mainmenu_8_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_8_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_8_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:8_8_s"
        >
          <Link
            href="/edit/object/foo:8"
          >
            <a
              href="/edit/object/foo:8"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 8
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_9_s"
      >
        <li
          key="breadcrumb_mainmenu_9_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_9_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_9_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:9_9_s"
        >
          <Link
            href="/edit/object/foo:9"
          >
            <a
              href="/edit/object/foo:9"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 9
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_10_s"
      >
        <li
          key="breadcrumb_mainmenu_10_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_10_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_10_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:10_10_s"
        >
          <Link
            href="/edit/object/foo:10"
          >
            <a
              href="/edit/object/foo:10"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 10
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_11_s"
      >
        <li
          key="breadcrumb_mainmenu_11_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_11_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_11_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:11_11_s"
        >
          <Link
            href="/edit/object/foo:11"
          >
            <a
              href="/edit/object/foo:11"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 11
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_12_s"
      >
        <li
          key="breadcrumb_mainmenu_12_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_12_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_12_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:12_12_s"
        >
          <Link
            href="/edit/object/foo:12"
          >
            <a
              href="/edit/object/foo:12"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 12
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_13_s"
      >
        <li
          key="breadcrumb_mainmenu_13_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_13_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_13_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:13_13_s"
        >
          <Link
            href="/edit/object/foo:13"
          >
            <a
              href="/edit/object/foo:13"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 13
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_14_s"
      >
        <li
          key="breadcrumb_mainmenu_14_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_14_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_14_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:14_14_s"
        >
          <Link
            href="/edit/object/foo:14"
          >
            <a
              href="/edit/object/foo:14"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 14
            </a>
          </Link>
        </li>
      </ul>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`Breadcrumb renders using ajax-loaded object data (multiple parents with common grandparent) 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs
      pid="foo:1234"
    >
      <ul
        className="breadcrumb"
        key="breadcrumbs_0_s"
      >
        <li
          key="breadcrumb_mainmenu_0_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_0_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_0_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:1232_0_s"
        >
          <Link
            href="/edit/object/foo:1232"
          >
            <a
              href="/edit/object/foo:1232"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Grandparent
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:1233_0_s"
        >
          <Link
            href="/edit/object/foo:1233"
          >
            <a
              href="/edit/object/foo:1233"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 1
            </a>
          </Link>
        </li>
      </ul>
      <ul
        className="breadcrumb"
        key="breadcrumbs_1_s"
      >
        <li
          key="breadcrumb_mainmenu_1_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_1_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_1_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:1232_1_s"
        >
          <Link
            href="/edit/object/foo:1232"
          >
            <a
              href="/edit/object/foo:1232"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Grandparent
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_foo:1231_1_s"
        >
          <Link
            href="/edit/object/foo:1231"
          >
            <a
              href="/edit/object/foo:1231"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent 2
            </a>
          </Link>
        </li>
      </ul>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`Breadcrumb renders using ajax-loaded object data (no parents) 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs
      pid="foo:1234"
    >
      <ul
        className="breadcrumb"
        key="breadcrumbs_0_s"
      >
        <li
          key="breadcrumb_mainmenu_0_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_0_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
      </ul>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case) 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs
      pid="foo:1234"
    >
      <ul
        className="breadcrumb"
        key="breadcrumbs_0_s"
      >
        <li
          key="breadcrumb_mainmenu_0_s"
        >
          <Link
            href="/"
          >
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Main Menu
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_home_0_s"
        >
          <Link
            href="/edit"
          >
            <a
              href="/edit"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Edit Home
            </a>
          </Link>
        </li>
        <li
          key="breadcrumb_expand_0_s"
        >
          <button
            onClick={[Function]}
          >
            ...
          </button>
        </li>
        <li
          key="breadcrumb_foo:1233_0_s"
        >
          <Link
            href="/edit/object/foo:1233"
          >
            <a
              href="/edit/object/foo:1233"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Fake Parent
            </a>
          </Link>
        </li>
      </ul>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;

exports[`Breadcrumb renders without a pid 1`] = `
<FetchContextProvider>
  <EditorContextProvider>
    <Breadcrumbs>
      <BasicBreadcrumbs>
        <ul
          className="breadcrumb"
        >
          <li>
            <Link
              href="/"
            >
              <a
                href="/"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                Main Menu
              </a>
            </Link>
          </li>
        </ul>
      </BasicBreadcrumbs>
    </Breadcrumbs>
  </EditorContextProvider>
</FetchContextProvider>
`;
